2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-desktop-icon-file.c:
        * src/nautilus-application.c:
        * src/nautilus-window-menus.c:
        * test/test-nautilus-directory-async.c:
        * test/test.c:
	Convert gnome_vfs calls to gio

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-application.[ch]:
	Convert gnome_vfs calls to gio

	* TODO-gio:
	Document some stuff that needs doing in gio-branch

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-search-engine-simple.c:
	Remove spew
	
        * src/nautilus-query-editor.c:
        Work around crash getting NULL back as the location.

2007-10-18  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-file-utilities.[ch]:
	Add nautilus_is_home_directory and nautilus_is_root_directory
	
        * src/nautilus-window-manage-views.c:
	Convert gnome_vfs calls to gio

2007-10-18  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-window.c (nautilus_window_go_up):
	Use gio to find parent

2007-10-18  Alexander Larsson  <alexl@redhat.com>

	* src/nautilus-pathbar.[ch]:
        * src/nautilus-navigation-window.c:
        * src/nautilus-window-manage-views.c:
	Use gio in pathbar

2007-10-17  Alexander Larsson  <alexl@redhat.com>

        * libnautilus-private/nautilus-vfs-utils.[ch]:
	Remove now unused gnome_vfs to gio helpers

2007-10-17  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-location-bar.c:
	Remove some unused code
	Replace gnome_vfs code with gio code

2007-10-17  Alexander Larsson  <alexl@redhat.com>

	* libnautilus-private/nautilus-file.c (nautilus_file_can_trash):
	Typo can_delete -> can_trash

2007-10-17  Alexander Larsson  <alexl@redhat.com>

        * src/nautilus-property-browser.c:
	Replace some gnome-vfs code with gio code

2007-10-17  Alexander Larsson  <alexl@redhat.com>

        * src/file-manager/fm-properties-window.c: